src/objects/AccountContact__c.object
<CustomObject>
    <description>CORE</description>
    <fields>
        <fullName>Academic_Role__c</fullName>
        <description>CORE: Describes role of a contact at an account.</description>
        <inlineHelpText>Describes role of a contact at an account.</inlineHelpText>
        <label>Academic Role</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assc. Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bookshop Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chancellor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curriculum Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curriculum Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Dean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Head of School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Learning Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emeritus Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Subject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Counsel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Librarian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountRole__c</fullName>
        <description>The role the contact plays on this account</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Educator</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to specify which Account is the Contacts Primary Account - updating this field updates the &apos;Account Name&apos;  field on the Contact</description>
        <label>Primary Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>CORE:  The Account linked to the Contact</description>
        <inlineHelpText>The Account linked to the Contact</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>CORE: Is this Account Contact relationship active?</description>
        <inlineHelpText>Is this Account Contact relationship active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Populated by a workflow rule every time record is modified to make Contact Name searchable in this junction object.</description>
        <inlineHelpText>Populated by a workflow rule every time record is modified to make Contact Name searchable in this junction object.</inlineHelpText>
        <label>Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>CORE: The Contact linked to the Account</description>
        <inlineHelpText>The Contact linked to the Account</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Relationships</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financially_Responsible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Financially responsible=True</description>
        <label>Financially Responsible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Friday_Office_Hours__c</fullName>
        <description>CORE: Available office hours on Friday</description>
        <inlineHelpText>Available office hours on Friday</inlineHelpText>
        <label>Friday Office Hours</label>
        <picklist>
            <picklistValues>
                <fullName>8.00 - 8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 - 9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 - 10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 - 10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 - 11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 - 11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 - 12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 - 12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 - 1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 - 1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 - 2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 - 2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 - 3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 - 3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 - 4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 - 4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 - 5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 - 5:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Grades_Taught__c</fullName>
        <description>Defines the grades taught by an individual at that Account</description>
        <inlineHelpText>Select the specific grades taught by this individual at the specific account.</inlineHelpText>
        <label>Grades Taught</label>
        <picklist>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Used to capture the building/room number at the Customer&apos;s address where this contact is based</description>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <formula>Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Province__c</fullName>
        <formula>Contact__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Used to display the Contact&apos;s Mobile Number</description>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday_Office_Hours__c</fullName>
        <description>CORE: Available office hours on Monday</description>
        <inlineHelpText>Available office hours on Monday</inlineHelpText>
        <label>Monday Office Hours</label>
        <picklist>
            <picklistValues>
                <fullName>8.00 - 8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 - 9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 - 10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 - 10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 - 11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 - 11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 - 12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 - 12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 - 1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 - 1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 - 2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 - 2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 - 3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 - 3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 - 4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 - 4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 - 5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 - 5:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Organisation_Type__c</fullName>
        <description>Used to display the Type of Account to which the Contact is associated</description>
        <formula>text(Account__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organisation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Academic_Role__c</fullName>
        <description>CORE: If Other is selected from Academic Role this field becomes required by validation rule</description>
        <inlineHelpText>If Other is selected from Academic Role please type in the role in this section</inlineHelpText>
        <label>Other Academic Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Used to display the Contacts Phone number</description>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address__c</fullName>
        <description>Used to display the display the Contacts Mailing Address</description>
        <formula>Contact__r.MailingCity+Contact__r.MailingCountry+Contact__r.MailingPostalCode+Contact__r.MailingState+Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Name__c</fullName>
        <description>Holds the value in the &apos;Account Name&apos; field on the &apos;Contact&apos;</description>
        <label>Primary Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <description>CORE: If the linked account on the contact record is the same as the linked record to this junction object the checkbox will be true</description>
        <formula>IF(Contact__r.Account.Id =  Account__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if this is the contact&apos;s primary account.</inlineHelpText>
        <label>Primary Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <description>Used to display the Contacts primary email</description>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Selling Account is a lookup to account</description>
        <label>Primary Selling Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Contacts (Primary Selling Account)</relationshipLabel>
        <relationshipName>Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Relevant to D2L Model only. On a Learner account, the Learner is defaulted to the &apos;Primary&apos; on the account. There can only be one &apos;Primary&apos; contact per Learner Account</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Name__c</fullName>
        <description>CORE:</description>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id, TEXT(Academic_Role__c)  &amp; &quot; at &quot; &amp;  Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Detail__c</fullName>
        <description>Detailed information on the role</description>
        <label>Role Detail</label>
        <picklist>
            <controllingField>AccountRole__c</controllingField>
            <picklistValues>
                <fullName>Administrative Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assc. Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asst. Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chancellor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curriculum Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Learning Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emeritus Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaching Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjunct Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visiting Lecturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bookstore Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Chairperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab Technician/Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subjects__c</fullName>
        <description>CORE:</description>
        <inlineHelpText>For Primary Education Only

Use to define which subjects the contact has involvement with</inlineHelpText>
        <label>Subjects</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTE Technical Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gifted Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality/Travel/Tourism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSIE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sync_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a hidden field and is used to flag records that are being updated by the trigger to avoid firing the financial responsible person and primary contact validations. The field is used to prevent the trigger from firing an error when it is un-checking related records when the user sets a new primary or FS contact</description>
        <label>Sync In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Synchronized_Account_Contact_Role__c</fullName>
        <label>Synchronized Account Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thursday_Office_Hours__c</fullName>
        <description>CORE: Available office hours on Thursday</description>
        <inlineHelpText>Available office hours on Thursday</inlineHelpText>
        <label>Thursday Office Hours</label>
        <picklist>
            <picklistValues>
                <fullName>8.00 - 8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 - 9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 - 10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 - 10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 - 11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 - 11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 - 12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 - 12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 - 1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 - 1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 - 2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 - 2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 - 3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 - 3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 - 4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 - 4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 - 5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 - 5:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tuesday_Office_Hours__c</fullName>
        <description>CORE: Available office hours on Tuesday</description>
        <inlineHelpText>Available office hours on Tuesday</inlineHelpText>
        <label>Tuesday Office Hours</label>
        <picklist>
            <picklistValues>
                <fullName>8.00 - 8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 - 9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 - 10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 - 10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 - 11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 - 11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 - 12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 - 12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 - 1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 - 1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 - 2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 - 2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 - 3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 - 3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 - 4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 - 4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 - 5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 - 5:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Wednesday_Office_Hours__c</fullName>
        <description>CORE: Available office hours on Wednesday</description>
        <inlineHelpText>Available office hours on Wednesday</inlineHelpText>
        <label>Wednesday Office Hours</label>
        <picklist>
            <picklistValues>
                <fullName>8.00 - 8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 - 9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 - 10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 - 10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 - 11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 - 11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 - 12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 - 12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 - 1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 - 1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 - 2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 - 2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 - 3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 - 3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 - 4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 - 4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 - 5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 - 5:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Account Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AOC-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>C_PreventAccountChange</fullName>
        <active>true</active>
        <description>Validation to prevent the change of the Account__c field</description>
        <errorConditionFormula>ISCHANGED( Account__c )</errorConditionFormula>
        <errorMessage>The change of the Account is not allowed.</errorMessage>
    </validationRules>
</CustomObject>